pyx/genlib/funclib.h



void println(char *string);

int findMin(int d1, int d2, int d3);

int findEditDistance(char *s1, char *s2);

double add(double x, double y);